[project]
name = "moomeo-and-cowliet"
version = "0.1.0"
description = ""
authors = [
    {name = "e_h022",email = "e_h022@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "cowdao-cowpy (>=1.0.0,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "rich-click (>=1.8.9,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"

[tool.poetry.scripts]
moo = "main.main:cli"

[[tool.poetry.packages]]
include = "main"



